added ignore file

--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -25,7 +25,7 @@ debug: $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) -o $(TARGET)
 
 #runs the program
-run: build
+run: $(TARGET)
 	./$(TARGET)
 
 #delete build files
