--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -9,9 +9,9 @@
 #                                                                                        #
 ##########################################################################################
 CC = gcc
-CFLAGS = -Wall -Werror -g
-OBJ = main.o check_string.o input_strings.o sort.o
-TARGET = string_sorter
+CCFLAGS = -Wall -Werror -g
+OBJ = main.o file_IO.o manipulate_list.o validate_input.o print.o get_input.o add_address.o look_up_address.o update_address.o delete_address.o aliases_for_location.o
+TARGET = IPv4_addresses
 
 #default command
 all: build
@@ -20,9 +20,9 @@ all: build
 build: $(OBJ)
 	$(CC) $(OBJ) -o $(TARGET)
 
-# build the program with debug flags
+#build the program with debug flags
 debug: $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(TARGET)
+	$(CC) $(CCFLAGS) $(OBJ) -o $(TARGET)
 
 #runs the program
 run: $(TARGET)
@@ -33,14 +33,35 @@ clean:
 	rm -rf $(OBJ) $(TARGET)
 
 #compiles and sets dependencies for the object files
-main.o: main.c character_strings.h
-	$(CC) -c main.c
+main.o: main.c address_t.h
+	$(CC) $(CCFLAGS) -c main.c
 
-check_string.o: check_string.c character_strings.h
-	$(CC) -c check_string.c
+file_IO.o: file_IO.c address_t.h
+	$(CC) $(CCFLAGS) -c file_IO.c
 
-input_strings.o: input_strings.c character_strings.h
-	$(CC) -c input_strings.c
+manipulate_list.o: manipulate_list.c address_t.h
+	$(CC) $(CCFLAGS) -c manipulate_list.c
 
-sort.o: sort.c character_strings.h
-	$(CC) -c sort.c
+validate_input.o: validate_input.c address_t.h
+	$(CC) $(CCFLAGS) -c validate_input.c
+
+print.o: print.c address_t.h
+	$(CC) $(CCFLAGS) -c print.c
+
+get_input.o: get_input.c
+	$(CC) $(CCFLAGS) -c get_input.c
+
+add_address.o: add_address.c address_t.h
+	$(CC) $(CCFLAGS) -c add_address.c
+
+look_up_address.o: look_up_address.c address_t.h
+	$(CC) $(CCFLAGS) -c look_up_address.c
+
+update_address.o: update_address.c address_t.h
+	$(CC) $(CCFLAGS) -c update_address.c
+
+delete_address.o: delete_address.c address_t.h
+	$(CC) $(CCFLAGS) -c delete_address.c
+
+aliases_for_location.o: aliases_for_location.c address_t.h
+	$(CC) $(CCFLAGS) -c aliases_for_location.c
